哈哈哈task26完成
花了3天，我太弱了

--- a/task26/icepro/task0026.html
+++ b/task26/icepro/task0026.html
@@ -17,16 +17,8 @@
 			<div class="console">
 				<p>console</p>
 				<br>
-				<ul>
-					<li>$ > 系统启动！</li>
-					<li>$ > 系统启动！</li>
-					<li>$ > 系统启动！</li>
-					<li>$ > 系统启动！</li>
-					<li>$ > 系统启动！</li>
-					<li>$ > 系统启动！</li>
-					<li>$ > 系统启动！</li>
-					<li>$ > 系统启动！</li>
-					<li>$ > 系统启动！</li>
+				<ul id="console">
+					
 				</ul>
 			</div>
 			<div id="control" class="contol-tab">
