--- a/task2/icepro/task0002.html
+++ b/task2/icepro/task0002.html
@@ -334,7 +334,7 @@
 
 		<div class="form-group">
 			<label class="form-label">性别：</label>
-			<input type="radio" checked><span>男</span><input type="radio"><span>女</span>
+			<p><input type="radio" checked><span>男</span><input type="radio"><span>女</span></p>
 		</div>
 
 		<div class="form-group">
