--- a/task7/icepro/task0007.html
+++ b/task7/icepro/task0007.html
@@ -167,24 +167,24 @@
 		</section>
 		<section class="display">
 			<figure>
-				<p><img src="img/cover3-1.png" alt="活动图"></img></p>
+				<p><img src="img/cover3-1.png" alt="活动图"/>
 				<h3>北京活动</h3>
 				<h4>新社区大联盟</h4>
 			</figure>
 			<figure>
 				<h3>上      海      活      动</h3>
 				<h4>夜上海新景观探索</h4>
-				<p><img src="img/cover3-2.png" alt="活动图"></img></p>
+				<p><img src="img/cover3-2.png" alt="活动图"></p>
 			</figure>
 			<figure>
-				<p><img src="img/cover3-3.png" alt="活动图"></img></p>
+				<p><img src="img/cover3-3.png" alt="活动图"></p>
 				<h3>深圳活动</h3>
 				<h4>全新海岸线观点站</h4>
 			</figure>
 			<figure>
 				<h3>香港活动</h3>
 				<h4>奢侈消费大派送</h4>
-				<p><img src="img/cover3-4.png" alt="活动图"></img></p>
+				<p><img src="img/cover3-4.png" alt="活动图"></p>
 			</figure>
 		</section>
 		<div class="switch－new">
@@ -302,7 +302,7 @@
 <br>
 <br>
 <br>
-<br>
+<br />
 <br>
 <br>
 <input>
