--- a/task10/ricosmall/index.html
+++ b/task10/ricosmall/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>hhh</title>
+        <title>任务十：Flexbox布局练习</title>
         <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
