添加函数结构逻辑
开始制作rander

--- a/task33/icepro/task0033.html
+++ b/task33/icepro/task0033.html
@@ -14,7 +14,11 @@
 	<textarea class="editor" spellcheck="false"></textarea>
 </div>
 	<script type="text/javascript" src="../../jspublic/query.js"></script>
+	<script type="text/javascript" src="js/square.js"></script>
+	<script type="text/javascript" src="js/map.js"></script>
 	<script type="text/javascript" src="js/editor.js"></script>
+	<script type="text/javascript" src="js/robot.js"></script>
+	<script type="text/javascript" src="js/rander.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
