--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="tpl/better1203.html"><div class="author">
                 <div class="move-l">
                     <figure>
-                        <p>better1203</p>
+                        <p>better1203-展示页面尚未完成</p>
                         <img src="img/icepro.png">
                     </figure>
                 </div>
@@ -25,7 +25,7 @@
             <a href="tpl/ricosmall.html"><div class="author">
                 <div class="move-l">
                     <figure>
-                        <p>ricosmall</p>
+                        <p>ricosmall-展示页面尚未完成</p>
                         <img src="img/icepro.png">
                     </figure>
                 </div>
@@ -33,7 +33,7 @@
             <a href="tpl/icepro.html"><div class="author">
                 <div class="move-l">
                     <figure>
-                        <p>icepro</p>
+                        <p>icepro-展示页面部分完成</p>
                         <img src="img/icepro.png">
                     </figure>
                 </div>
