做了一个测试

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="author">
                     <div class="move-l">
                         <figure>
-                            <p>better1203</p>
+                            <p>better1203-展示页面尚未完成</p>
                             <img src="img/icepro.png">
                         </figure>
                     </div>
@@ -28,7 +28,7 @@
                 <div class="author">
                     <div class="move-l">
                         <figure>
-                            <p>ricosmall</p>
+                            <p>ricosmall-展示页面尚未完成</p>
                             <img src="img/ricosmall.png">
                         </figure>
                     </div>
@@ -38,7 +38,7 @@
                 <div class="author">
                     <div class="move-l">
                         <figure>
-                            <p>icepro</p>
+                            <p>icepro-展示页面部分完成</p>
                             <img src="img/icepro.png">
                         </figure>
                     </div>
