修正task25一个css和js的错误
未移除open
open应该是dropdown的并列选择器

--- a/task25/icepro/task0025.html
+++ b/task25/icepro/task0025.html
@@ -72,7 +72,7 @@
 			list-style-image: url("right_arrow.gif");
 			color: rgb(109, 8, 7);	
 		}
-		#display .open {
+		#display .drop-down.open {
 			list-style-image: url("down_arrow.gif") !important;
 			color: rgb(109, 8, 7);	
 		}
