--- a/task51/icepro/src/index.html
+++ b/task51/icepro/src/index.html
@@ -4,8 +4,8 @@
 
 <body>
 @@include('public/nav.html')
-	<div class="content">
-		
+	<div class="content"  id="content">
+
 	</div>
-    <script src="./js/demo.js?rev=@@hash"></script>
+    <script src="./js/index.js?rev=@@hash"></script>
 @@include('public/footor.html')
