--- a/task51/icepro/src/public/header.html
+++ b/task51/icepro/src/public/header.html
@@ -4,5 +4,6 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="./css/main.min.css?rev=@@hash">
-    <script src="./lib/react.js?rev=@@hash"></script>
-    <script src="./lib/react-dom.js?rev=@@hash"></script>
+    <script type="text/javascript" src="./js/storage.js?rev=@@hash"></script>
+    <script type="text/javascript" src="./lib/react.js?rev=@@hash"></script>
+    <script type="text/javascript" src="./lib/react-dom.js?rev=@@hash"></script>
